Fixed null check for fighters and made clean checkpoint before introducing lite mode in

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,9 @@ libtf_la_SOURCES = \
   params.cpp \
   pending.cpp
 libtfheaders = \
+  fpm/fixed.hpp \
+  fpm/ios.hpp \
+  fpm/math.hpp \
   context.hpp \
   forks.hpp \
   gamestatejson.hpp \
