--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
 ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -Im4
 
-SUBDIRS = data proto proto2 database src gametest
+SUBDIRS = data proto proto2 database libwinsane src gametest
