Added WINDOWS conditional, to make sure app fully compiles under UNIX

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,6 @@
 ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -Im4
-
-SUBDIRS = data proto proto2 database libwinsane src gametest
+ ifeq ($(OS),Windows_NT)
+ SUBDIRS = data proto proto2 database libwinsane src gametest
+ else
+ SUBDIRS = data proto proto2 database src gametest
+ endif
