--- a/proto/Makefile.am
+++ b/proto/Makefile.am
@@ -16,6 +16,7 @@ ROCONFIG_TEXT_PROTOS = \
   roconfig/sweetenerblueprint.pb.text \
   roconfig/tournamentblueprint.pb.text \
   roconfig/specialtournamentblueprint.pb.text \
+  roconfig/blocks.pb.text \
   roconfig/testnet.pb.text
 
 BUILT_SOURCES = \
@@ -47,6 +48,7 @@ PROTOS = \
   sweetener_blueprint.proto \
   tournament_blueprint.proto \
   specialtournament_blueprint.proto \
+  blocks.proto \
   xaya_player.proto \
   ongoing.proto \
   fighter.proto
